# psyneulink-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/run-specs/: smoke.yaml
plans/: ui-pdfs-psyche.md
src/psyneulink_agent/: chat.py  client.py  config.py  main.py  repl.py  runner.py
src/psyneulink_agent/core/: __init__.py  loop.py  mcp_bridge.py  resources.py  session.py  system_prompt.py
src/psyneulink_agent/core/backends/: __init__.py  anthropic_sdk.py  base.py  claude_cli.py
tests/: conftest.py  test_backends_anthropic_sdk.py  test_backends_claude_cli.py  test_chat.py  test_client.py  test_integration.py  test_loop.py  test_main.py  test_mcp_bridge.py  test_mcp_bridge_sse.py  test_repl.py  test_resources.py  test_runner.py  test_session.py
