[project]
name = "psyneulink-agent"
version = "0.0.1"
description = "Modeling agent for the psyneulink-ai stack. Consumes psyneulink-mcp via MCP."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6",
]

[project.scripts]
psyneulink-agent = "psyneulink_agent.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psyneulink_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -m 'not integration'"
markers = [
    "integration: marks tests that require a running psyneulink-mcp server (run with '-m integration')",
]
